deployment-sidecar-stack-local.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: kayak-service  
  labels:  
    app: kayak-service  
spec:  
  ports:  
    - name: http  
      port: 8000  
  selector:  
    app: kayak-service  
---
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: kayak-service  
spec:  
  replicas: 1  
  template:  
    metadata:  
      labels:  
        app: kayak-service  
        version: v1  
    spec:  
      containers:  
        - name: kayak-app  
          image: gcr.io/spring-boot-gke-244822/kayak-app:1.1
          imagePullPolicy: IfNotPresent  
          ports:  
            - containerPort: 8000  
          livenessProbe:  
            httpGet:  
              path: /  
              port: 8000  
            initialDelaySeconds: 5  
            periodSeconds: 5
          volumeMounts:
          - name: usrlog
            mountPath: /usr/share/log
          - name: varlog
            mountPath: /var/log
        - name: count-agent-app
          image: busybox
          args: [/bin/sh, -c, 'tail -n+1 -f /usr/share/log/kayak.log']
          volumeMounts:
          - name: usrlog
            mountPath: /usr/share/log
          - name: varlog
            mountPath: /var/log
        - name: count-agent-root
          image: k8s.gcr.io/fluentd-gcp:1.30
          volumeMounts:
          - name: usrlog
            mountPath: /usr/share/log
          - name: config-volume
            mountPath: /etc/fluentd-config
          - name: varlog
            mountPath: /var/log
      volumes:
      - name: usrlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: fluentd-config
      - name: varlog
        emptyDir: {}
