deployment_new.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: kayak-service  
  labels:  
    app: kayak-service  
spec:  
  ports:  
    - name: http  
      port: 8000  
  selector:  
    app: kayak-service  
---
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: kayak-service  
spec:  
  replicas: 1  
  template:  
    metadata:  
      labels:  
        app: kayak-service  
        version: v1  
    spec:  
      containers:  
        - name: kayak-app  
          image: gcr.io/spring-boot-gke-244822/kayak-app:1.0  
          imagePullPolicy: IfNotPresent  
          ports:  
            - containerPort: 8000  
          volumeMounts:
          - name: varlog
            mountPath: /var/log
        - name: root-log
          image: gcr.io/spring-boot-gke-244822/kayak-app:1.0
          imagePullPolicy: IfNotPresent
          args: [/bin/sh, -c, 'tail -n+1 -f /var/log/root.log']
          volumeMounts:
          - name: varlog
            mountPath: /var/log
        - name: kayak-log
          image: gcr.io/spring-boot-gke-244822/kayak-app:1.0
          imagePullPolicy: IfNotPresent
          args: [/bin/sh, -c, 'tail -n+1 -f /var/log/kayak.log']
          volumeMounts:
          - name: varlog
            mountPath: /var/log
      volumes:
      - name: varlog
        emptyDir: {}
