logstash.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: logstash
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.2.0
        ports:
        - containerPort: 9999
        args:
        - -f
        - /etc/logstash/conf.d/
        volumeMounts:
        - mountPath: /etc/logstash/conf.d
          name: logstash-volume
      restartPolicy: Always
      volumes:
      - name: logstash-volume
        configMap:
          name: logstash-config

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  type: NodePort
  ports:
  - name: "9999"
    port: 9999
    targetPort: 9999
  selector:
    app: logstash
